--- a/package.json
+++ b/package.json
@@ -1,25 +1,164 @@
 {
-  "name": "nekomusic",
+  "name": "nekomusicbot-dev-v-a-1.0.0",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "dependencies": {
+    "abbrev": "^1.1.1",
+    "abort-controller": "^3.0.0",
+    "agent-base": "^6.0.2",
+    "ansi-regex": "^3.0.0",
+    "aproba": "^2.0.0",
+    "are-we-there-yet": "^2.0.0",
+    "async.parallellimit": "^0.5.2",
+    "async.util.eachoflimit": "^0.5.2",
+    "async.util.isarray": "^0.5.2",
+    "async.util.isarraylike": "^0.5.2",
+    "async.util.keyiterator": "^0.5.2",
+    "async.util.keys": "^0.5.2",
+    "async.util.noop": "^0.5.2",
+    "async.util.once": "^0.5.2",
+    "async.util.onlyonce": "^0.5.2",
+    "async.util.parallel": "^0.5.2",
+    "async.util.restparam": "^0.5.2",
+    "asynckit": "^0.4.0",
+    "balanced-match": "^1.0.2",
+    "boolbase": "^1.0.0",
+    "boolstring": "^1.0.2",
+    "brace-expansion": "^1.1.11",
+    "buffer-from": "^1.1.2",
+    "callsites": "^3.1.0",
+    "caseless": "^0.12.0",
+    "cheerio": "^1.0.0-rc.10",
+    "cheerio-select": "^1.5.0",
+    "chownr": "^2.0.0",
+    "cli-color": "^1.2.0",
+    "color-support": "^1.1.3",
+    "combined-stream": "^1.0.8",
+    "concat-map": "^0.0.1",
+    "concat-stream": "^1.6.2",
+    "console-control-strings": "^1.1.0",
+    "core-util-is": "^1.0.3",
+    "css-select": "^4.1.3",
+    "css-what": "^5.1.0",
+    "d": "^1.0.1",
+    "dasu": "^0.4.2",
+    "debug": "^4.3.2",
+    "delayed-stream": "^1.0.0",
+    "delegates": "^1.0.0",
+    "detect-libc": "^1.0.3",
+    "discord-api-types": "^0.24.0",
+    "discord.js": "^13.2.0",
+    "dom-serializer": "^1.3.2",
+    "domelementtype": "^2.2.0",
+    "domhandler": "^4.2.2",
+    "domutils": "^2.8.0",
+    "dot-prop": "^6.0.1",
+    "entities": "^2.2.0",
+    "env-paths": "^2.2.1",
+    "es5-ext": "^0.10.53",
+    "es6-iterator": "^2.0.3",
+    "es6-symbol": "^3.1.3",
+    "es6-weak-map": "^2.0.3",
+    "event-emitter": "^0.3.5",
+    "event-target-shim": "^5.0.1",
+    "events": "^3.3.0",
+    "ext": "^1.6.0",
+    "ffmpeg-static": "^4.4.0",
+    "form-data": "^4.0.0",
+    "fs-minipass": "^2.1.0",
+    "fs.realpath": "^1.0.0",
+    "gauge": "^3.0.1",
+    "glob": "^7.2.0",
+    "has-unicode": "^2.0.1",
+    "htmlparser2": "^6.1.0",
+    "http-response-object": "^3.0.2",
+    "https-proxy-agent": "^5.0.0",
+    "human-time": "^0.0.2",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-obj": "^2.0.0",
+    "is-promise": "^2.2.2",
+    "isarray": "^1.0.0",
+    "jsonpath-plus": "^5.0.7",
+    "keypress": "^0.2.1",
+    "libsodium": "^0.7.9",
+    "libsodium-wrappers": "^0.7.9",
+    "lodash.isequal": "^4.5.0",
+    "lru-cache": "^6.0.0",
+    "lru-queue": "^0.1.0",
+    "m3u8stream": "^0.8.4",
+    "make-dir": "^3.1.0",
+    "memoizee": "^0.4.15",
+    "mime-db": "^1.50.0",
+    "mime-types": "^2.1.33",
+    "miniget": "^4.2.1",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "minipass": "^3.1.5",
+    "minizlib": "^2.1.2",
+    "mkdirp": "^1.0.4",
+    "ms": "^2.1.2",
+    "next-tick": "^1.0.0",
+    "node-addon-api": "^4.2.0",
+    "node-fetch": "^2.6.5",
+    "node-fzf": "^0.5.3",
+    "nopt": "^5.0.0",
+    "npmlog": "^5.0.1",
+    "nth-check": "^2.0.1",
+    "object-assign": "^4.1.1",
+    "once": "^1.4.0",
+    "ow": "^0.27.0",
+    "parse-cache-control": "^1.0.1",
+    "parse5": "^6.0.1",
+    "parse5-htmlparser2-tree-adapter": "^6.0.1",
+    "path-is-absolute": "^1.0.1",
+    "process-nextick-args": "^2.0.1",
+    "progress": "^2.0.3",
+    "readable-stream": "^2.3.7",
+    "redstar": "^0.0.2",
+    "rimraf": "^3.0.2",
+    "safe-buffer": "^5.1.2",
+    "sax": "^1.2.4",
+    "semver": "^7.3.5",
+    "set-blocking": "^2.0.0",
+    "signal-exit": "^3.0.5",
+    "string_decoder": "^1.1.1",
+    "string-width": "^2.1.1",
+    "strip-ansi": "^4.0.0",
+    "tar": "^6.1.11",
+    "timers-ext": "^0.1.7",
+    "tiny-typed-emitter": "^2.1.0",
+    "tr46": "^0.0.3",
+    "ts-mixer": "^6.0.0",
+    "tslib": "^2.3.1",
+    "ttys": "^0.0.3",
+    "type": "^1.2.0",
+    "type-fest": "^1.4.0",
+    "typedarray": "^0.0.6",
+    "util-deprecate": "^1.0.2",
+    "vali-date": "^1.0.0",
+    "webidl-conversions": "^3.0.1",
+    "whatwg-url": "^5.0.0",
+    "wide-align": "^1.1.3",
+    "wrappy": "^1.0.2",
+    "ws": "^7.5.5",
+    "yallist": "^4.0.0",
+    "yt-search": "^2.10.2",
+    "ytdl-core": "^4.9.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Squl032/NekoMusic.git"
+    "url": "git+https://github.com/Squl032/NekoMusicBot-dev-v-a-1.0.0.git"
   },
-  "author": "Squl032松夏",
+  "author": "Squl032",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Squl032/NekoMusic/issues"
+    "url": "https://github.com/Squl032/NekoMusicBot-dev-v-a-1.0.0/issues"
   },
-  "homepage": "https://github.com/Squl032/NekoMusic#readme",
-  "dependencies": {
-    "@discordjs/rest": "^0.1.0-canary.0",
-    "@koenie06/discord.js-music": "^1.2.9",
-    "discord-api-types": "^0.24.0",
-    "discord.js": "^13.2.0"
-  },
-  "description": ""
+  "homepage": "https://github.com/Squl032/NekoMusicBot-dev-v-a-1.0.0#readme"
 }
